Add rich events to live agent output

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -421,6 +421,13 @@
               <button class="ghost sm icon-btn" id="ticket-live-output-expand" title="Toggle panel">▼</button>
             </div>
             <div class="ticket-live-output-content hidden" id="ticket-live-output-content">
+              <div class="ticket-live-output-events hidden" id="ticket-live-output-events">
+                <div class="ticket-live-output-events-header">
+                  <span class="muted">Events</span>
+                  <span class="ticket-live-output-events-count" id="ticket-live-output-events-count">0</span>
+                </div>
+                <div class="ticket-chat-events-list" id="ticket-live-output-events-list"></div>
+              </div>
               <pre class="ticket-live-output-text" id="ticket-live-output-text"></pre>
             </div>
           </div>
