Implement agent selection and model/reasoning overrides in ticket flow
- Added UI components for selecting agents, models, and reasoning efforts in the ticket flow.
- Enhanced the ticket flow definition to accept optional model and reasoning parameters.
- Updated the ticket runner to utilize model and reasoning options during agent turns.
- Refactored workspace and ticket handling to support new agent control features, improving user interaction and flexibility.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -379,6 +379,11 @@
             <span class="pill pill-idle" id="ticket-flow-status">idle</span>
           </div>
           <div class="ticket-flow-actions">
+            <div class="agent-controls" id="ticket-flow-agent-controls">
+              <select id="ticket-flow-agent-select" title="Agent"></select>
+              <select id="ticket-flow-model-select" title="Model"></select>
+              <select id="ticket-flow-reasoning-select" title="Reasoning"></select>
+            </div>
             <button class="primary sm" id="ticket-flow-bootstrap">Start Ticket Flow</button>
             <button class="ghost sm" id="ticket-flow-stop">Stop</button>
             <button class="ghost sm" id="ticket-flow-resume">Resume</button>
