Refactor ticket flow to remove model/reasoning overrides and update UI components
- Removed optional model and reasoning parameters from the ticket flow definition and related UI elements.
- Updated the ticket editor to include new model and reasoning selection fields, enhancing user interaction.
- Refactored ticket flow initialization to streamline agent control features and improve overall functionality.
- Adjusted frontmatter handling in the linting and runner components to accommodate the changes in model and reasoning management.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -379,11 +379,6 @@
             <span class="pill pill-idle" id="ticket-flow-status">idle</span>
           </div>
           <div class="ticket-flow-actions">
-            <div class="agent-controls" id="ticket-flow-agent-controls">
-              <select id="ticket-flow-agent-select" title="Agent"></select>
-              <select id="ticket-flow-model-select" title="Model"></select>
-              <select id="ticket-flow-reasoning-select" title="Reasoning"></select>
-            </div>
             <button class="primary sm" id="ticket-flow-bootstrap">Start Ticket Flow</button>
             <button class="ghost sm" id="ticket-flow-stop">Stop</button>
             <button class="ghost sm" id="ticket-flow-resume">Resume</button>
@@ -463,6 +458,8 @@
                   <option value="opencode">opencode</option>
                   <option value="user">user</option>
                 </select>
+                <select class="ticket-fm-select" id="ticket-fm-model" title="Model"></select>
+                <select class="ticket-fm-select" id="ticket-fm-reasoning" title="Reasoning"></select>
                 <input class="ticket-fm-input" id="ticket-fm-title" placeholder="Title (optional)" spellcheck="false"
                   type="text">
                 <div class="ticket-header-actions">
