Implement core chat functionality and voice input for document and ticket chats
- Introduced `docChatCore.js` to manage chat state, message handling, and event rendering for document and ticket chats.
- Added `docChatStorage.js` for saving and loading chat history using local storage, ensuring persistence across sessions.
- Created `docChatVoice.js` to facilitate voice input integration, allowing users to add voice transcripts to chat.
- Updated UI components in `index.html` and `styles.css` to support new chat features, including a voice button and improved message styling.
- Refactored ticket chat actions to utilize the new chat core, enhancing code maintainability and reducing duplication.
- Ensured compatibility with existing ticket and workspace flows by integrating shared chat functionalities.

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -324,6 +324,7 @@
                   <textarea enterkeyhint="enter" id="workspace-chat-input"
                     placeholder="Ask AI to edit this workspace doc..." rows="1" spellcheck="false"></textarea>
                   <div class="doc-chat-input-buttons compose-buttons">
+                    <button class="ghost sm voice-button" id="workspace-chat-voice" title="Hold to talk"></button>
                     <button class="primary sm" id="workspace-chat-send" title="Send">↑</button>
                   </div>
                 </div>
@@ -353,7 +354,7 @@
                   </div>
                   <div class="doc-chat-events-list" id="workspace-chat-events-list"></div>
                 </div>
-                <div class="doc-chat-section-header">
+                <div class="doc-chat-section-header" id="workspace-chat-history-header">
                   <div class="doc-chat-section-title">History</div>
                 </div>
                 <div class="doc-chat-history" id="workspace-chat-history"></div>
