Fix inbox handoff wording and missing thread handling

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -439,7 +439,7 @@
                 <span class="muted">Handoff history</span>
                 <span class="muted small" id="ticket-handoff-note">–</span>
               </div>
-              <div class="ticket-list" id="ticket-handoff-history">No messages yet.</div>
+              <div class="ticket-list" id="ticket-handoff-history">No handoffs yet.</div>
             </div>
           </div>
         </div>
